Edit on export delivery data to excel sheet

--- a/ClothesShop/Languages/Resources.ar-EG.resx
+++ b/ClothesShop/Languages/Resources.ar-EG.resx
@@ -775,4 +775,7 @@
   <data name="ChangeOrdersStatus" xml:space="preserve">
     <value>تغيير حالة الطلبات</value>
   </data>
+  <data name="ExcelSheet" xml:space="preserve">
+    <value>شيت Excel</value>
+  </data>
 </root>
